--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
     "require": {
         "php": "^8.4",
         "laravel/framework": "^12.29.0",
+        "livewire/livewire": "^3.6",
         "nunomaduro/essentials": "^1.0.0"
     },
     "require-dev": {
