--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,8 @@
     "require": {
         "php": "^8.4",
         "laravel/framework": "^12.29.0",
+        "livewire/flux": "^2.4",
+        "livewire/flux-pro": "^2.4",
         "livewire/livewire": "^3.6",
         "nunomaduro/essentials": "^1.0.0"
     },
@@ -92,5 +94,11 @@
         }
     },
     "minimum-stability": "dev",
-    "prefer-stable": true
+    "prefer-stable": true,
+    "repositories": {
+        "flux-pro": {
+            "type": "composer",
+            "url": "https://composer.fluxui.dev"
+        }
+    }
 }
