--- a/composer.json
+++ b/composer.json
@@ -12,9 +12,9 @@
         "php": "^8.4",
         "laravel/framework": "^12.29.0",
         "livewire/flux": "^2.4",
-        "livewire/flux-pro": "^2.4",
         "livewire/livewire": "^3.6",
-        "nunomaduro/essentials": "^1.0.0"
+        "lorisleiva/laravel-actions": "^2.9.1",
+        "nunomaduro/essentials": "dev-conditional-actions"
     },
     "require-dev": {
         "fakerphp/faker": "^1.24.1",
@@ -99,6 +99,10 @@
         "flux-pro": {
             "type": "composer",
             "url": "https://composer.fluxui.dev"
+        },
+        "essentials": {
+            "type": "vcs",
+            "url": "https://github.com/ahosker/essentials"
         }
     }
 }
