--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -49,6 +49,9 @@ jobs:
       - name: Generate Application Key
         run: php artisan key:generate
 
+      - name: Activate Flux Pro
+        run: php artisan key:generate
+
       - name: Rector Cache
         uses: actions/cache@v4
         with:
