--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "prettier-plugin-organize-imports": "^4.3.0",
         "prettier-plugin-tailwindcss": "^0.6.14",
         "tailwindcss": "^4.1.14",
-        "vite": "^7.1.9"
+        "vite": "^7.1.9",
+        "blade-formatter": "^1.44.2"
     }
 }
