--- a/composer.json
+++ b/composer.json
@@ -88,7 +88,7 @@
             "pint --parallel --test",
             "rector --dry-run",
             "npm run test:lint",
-            "npx blade-formatter \"resources/views/**/*.blade.php\" --check"
+            "npx blade-formatter \"resources/views/**/*.blade.php\" --check-formatted"
         ],
         "test:unit": "pest --parallel --coverage --exactly=100.0",
         "test:types": "phpstan",
