--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     },
     "devDependencies": {
         "@tailwindcss/vite": "^4.1.17",
+        "blade-formatter": "^1.44.2",
         "concurrently": "^9.2.1",
         "laravel-vite-plugin": "^2.0.1",
         "npm-check-updates": "^19.1.2",
@@ -17,7 +18,6 @@
         "prettier-plugin-organize-imports": "^4.3.0",
         "prettier-plugin-tailwindcss": "^0.7.1",
         "tailwindcss": "^4.1.17",
-        "vite": "^7.2.4",
-        "blade-formatter": "^1.44.2"
+        "vite": "^7.2.4"
     }
 }
